--- a/static/prepros.cfg
+++ b/static/prepros.cfg
@@ -608,6 +608,292 @@
           "optimized": false,
           "height": 453,
           "width": 750
+        },
+        "b04ddf31": {
+          "id": "b04ddf31",
+          "path": "images/004.jpg",
+          "output": "images/004.jpg",
+          "name": "004.jpg",
+          "category": "IMAGE",
+          "size": 380396,
+          "type": "jpg",
+          "initialSize": 380396,
+          "optimized": false,
+          "height": 533,
+          "width": 800
+        },
+        "dd3632bb": {
+          "id": "dd3632bb",
+          "path": "images/008.jpg",
+          "output": "images/008.jpg",
+          "name": "008.jpg",
+          "category": "IMAGE",
+          "size": 0,
+          "type": "jpg",
+          "initialSize": 0,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "8f907a0d": {
+          "id": "8f907a0d",
+          "path": "images/021.jpg",
+          "output": "images/021.jpg",
+          "name": "021.jpg",
+          "category": "IMAGE",
+          "size": 0,
+          "type": "jpg",
+          "initialSize": 0,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "2cc78433": {
+          "id": "2cc78433",
+          "path": "images/025.jpg",
+          "output": "images/025.jpg",
+          "name": "025.jpg",
+          "category": "IMAGE",
+          "size": 0,
+          "type": "jpg",
+          "initialSize": 0,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "650e3231": {
+          "id": "650e3231",
+          "path": "images/027.jpg",
+          "output": "images/027.jpg",
+          "name": "027.jpg",
+          "category": "IMAGE",
+          "size": 0,
+          "type": "jpg",
+          "initialSize": 0,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "b66e1eaa": {
+          "id": "b66e1eaa",
+          "path": "images/033.png",
+          "output": "images/033.png",
+          "name": "033.png",
+          "category": "IMAGE",
+          "size": 0,
+          "type": "png",
+          "initialSize": 0,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "177d7af4": {
+          "id": "177d7af4",
+          "path": "images/034.png",
+          "output": "images/034.png",
+          "name": "034.png",
+          "category": "IMAGE",
+          "size": 0,
+          "type": "png",
+          "initialSize": 0,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "9cd1b229": {
+          "id": "9cd1b229",
+          "path": "images/039.png",
+          "output": "images/039.png",
+          "name": "039.png",
+          "category": "IMAGE",
+          "size": 0,
+          "type": "png",
+          "initialSize": 0,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "73abb606": {
+          "id": "73abb606",
+          "path": "images/044.png",
+          "output": "images/044.png",
+          "name": "044.png",
+          "category": "IMAGE",
+          "size": 0,
+          "type": "png",
+          "initialSize": 0,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "b7b64047": {
+          "id": "b7b64047",
+          "path": "images/047.jpg",
+          "output": "images/047.jpg",
+          "name": "047.jpg",
+          "category": "IMAGE",
+          "size": 0,
+          "type": "jpg",
+          "initialSize": 0,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "95c43706": {
+          "id": "95c43706",
+          "path": "images/049.jpg",
+          "output": "images/049.jpg",
+          "name": "049.jpg",
+          "category": "IMAGE",
+          "size": 0,
+          "type": "jpg",
+          "initialSize": 0,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "0706cf9c": {
+          "id": "0706cf9c",
+          "path": "images/056.jpg",
+          "output": "images/056.jpg",
+          "name": "056.jpg",
+          "category": "IMAGE",
+          "size": 0,
+          "type": "jpg",
+          "initialSize": 0,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "b0e963aa": {
+          "id": "b0e963aa",
+          "path": "images/057.jpg",
+          "output": "images/057.jpg",
+          "name": "057.jpg",
+          "category": "IMAGE",
+          "size": 0,
+          "type": "jpg",
+          "initialSize": 0,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "0ca6f0ec": {
+          "id": "0ca6f0ec",
+          "path": "images/068.jpg",
+          "output": "images/068.jpg",
+          "name": "068.jpg",
+          "category": "IMAGE",
+          "size": 0,
+          "type": "jpg",
+          "initialSize": 0,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "fbec7da7": {
+          "id": "fbec7da7",
+          "path": "images/refle.jpg",
+          "output": "images/refle.jpg",
+          "name": "refle.jpg",
+          "category": "IMAGE",
+          "size": 429935,
+          "type": "jpg",
+          "initialSize": 429935,
+          "optimized": false,
+          "height": 899,
+          "width": 1348
+        },
+        "dc2166d8": {
+          "id": "dc2166d8",
+          "path": "images/massage.jpg",
+          "output": "images/massage.jpg",
+          "name": "massage.jpg",
+          "category": "IMAGE",
+          "size": 580276,
+          "type": "jpg",
+          "initialSize": 580276,
+          "optimized": false,
+          "height": 799,
+          "width": 1198
+        },
+        "0717f46a": {
+          "id": "0717f46a",
+          "path": "images/image-4.png",
+          "output": "images/image-4.png",
+          "name": "image-4.png",
+          "category": "IMAGE",
+          "size": 822717,
+          "type": "png",
+          "initialSize": 822717,
+          "optimized": false,
+          "height": 800,
+          "width": 600
+        },
+        "13bb9968": {
+          "id": "13bb9968",
+          "path": "images/ogimage.png",
+          "output": "images/ogimage.png",
+          "name": "ogimage.png",
+          "category": "IMAGE",
+          "size": 69158,
+          "type": "png",
+          "initialSize": 69158,
+          "optimized": false,
+          "height": 630,
+          "width": 1200
+        },
+        "bad54ab9": {
+          "id": "bad54ab9",
+          "path": "images/apple-touch-icon-144-precomposed.png",
+          "output": "images/apple-touch-icon-144-precomposed.png",
+          "name": "apple-touch-icon-144-precomposed.png",
+          "category": "IMAGE",
+          "size": 9568,
+          "type": "png",
+          "initialSize": 9568,
+          "optimized": false,
+          "height": 144,
+          "width": 144
+        },
+        "24b2f658": {
+          "id": "24b2f658",
+          "path": "images/apple-touch-icon-114-precomposed.png",
+          "output": "images/apple-touch-icon-114-precomposed.png",
+          "name": "apple-touch-icon-114-precomposed.png",
+          "category": "IMAGE",
+          "size": 6920,
+          "type": "png",
+          "initialSize": 6920,
+          "optimized": false,
+          "height": 114,
+          "width": 114
+        },
+        "cdee84e3": {
+          "id": "cdee84e3",
+          "path": "images/apple-touch-icon-72-precomposed.png",
+          "output": "images/apple-touch-icon-72-precomposed.png",
+          "name": "apple-touch-icon-72-precomposed.png",
+          "category": "IMAGE",
+          "size": 4559,
+          "type": "png",
+          "initialSize": 4559,
+          "optimized": false,
+          "height": 72,
+          "width": 72
+        },
+        "4055bf77": {
+          "id": "4055bf77",
+          "path": "images/apple-touch-icon-57-precomposed.png",
+          "output": "images/apple-touch-icon-57-precomposed.png",
+          "name": "apple-touch-icon-57-precomposed.png",
+          "category": "IMAGE",
+          "size": 3255,
+          "type": "png",
+          "initialSize": 3255,
+          "optimized": false,
+          "height": 57,
+          "width": 57
         }
       },
       "deploymentHistory": {},
