--- a/static/prepros.cfg
+++ b/static/prepros.cfg
@@ -216,7 +216,8 @@
           "customOutput": false,
           "imported": false,
           "parents": [],
-          "type": "javascript"
+          "type": "javascript",
+          "babel": false
         },
         "d73b3391": {
           "id": "d73b3391",
@@ -231,7 +232,8 @@
           "customOutput": false,
           "imported": false,
           "parents": [],
-          "type": "javascript"
+          "type": "javascript",
+          "babel": false
         },
         "114c3080": {
           "id": "114c3080",
@@ -246,7 +248,8 @@
           "customOutput": false,
           "imported": false,
           "parents": [],
-          "type": "javascript"
+          "type": "javascript",
+          "babel": false
         },
         "6e2d84b1": {
           "id": "6e2d84b1",
@@ -261,7 +264,8 @@
           "customOutput": false,
           "imported": false,
           "parents": [],
-          "type": "javascript"
+          "type": "javascript",
+          "babel": false
         },
         "21acb553": {
           "id": "21acb553",
@@ -276,7 +280,8 @@
           "customOutput": false,
           "imported": false,
           "parents": [],
-          "type": "javascript"
+          "type": "javascript",
+          "babel": false
         },
         "a0233e7c": {
           "id": "a0233e7c",
@@ -291,7 +296,8 @@
           "customOutput": false,
           "imported": false,
           "parents": [],
-          "type": "javascript"
+          "type": "javascript",
+          "babel": false
         },
         "8945379a": {
           "id": "8945379a",
@@ -306,7 +312,8 @@
           "customOutput": false,
           "imported": false,
           "parents": [],
-          "type": "javascript"
+          "type": "javascript",
+          "babel": false
         },
         "f658c9d5": {
           "id": "f658c9d5",
@@ -321,7 +328,8 @@
           "customOutput": false,
           "imported": false,
           "parents": [],
-          "type": "javascript"
+          "type": "javascript",
+          "babel": false
         },
         "271768a2": {
           "id": "271768a2",
@@ -913,7 +921,8 @@
           "mouseSync": true,
           "scrollSync": true,
           "keyboardSync": true,
-          "animateCss": true
+          "animateCss": true,
+          "enabled": false
         },
         "deployment": {
           "ftpHost": "",
@@ -1022,7 +1031,8 @@
             "autoCompile": false,
             "uglify": true,
             "mangle": true,
-            "sourceMaps": false
+            "sourceMaps": false,
+            "babel": false
           },
           "jade": {
             "autoCompile": true,
@@ -1034,7 +1044,8 @@
             "doubleQuotes": false
           },
           "kit": {
-            "autoCompile": true
+            "autoCompile": true,
+            "minifyHtml": false
           },
           "slim": {
             "autoCompile": true,
