--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "bootstrap",
     "css"
   ],
+  "engines": {
+    "node": "5.11.1"
+  },
   "homepage": "http://getbootstrap.com",
   "author": "Twitter, Inc.",
   "scripts": {
@@ -40,5 +43,8 @@
     "grunt-html-validation": "~0.1.6",
     "grunt-jekyll": "~0.4.0",
     "grunt-recess": "~0.4.0"
+  },
+  "dependencies": {
+    "express": "^4.15.2"
   }
 }
